--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,11 +9,12 @@
           <img src="{{.Params.image | absURL }}" alt="{{.Title}}" class="img-fluid rounded mb-4">
           <p class="font-secondary">Published on {{ .PublishDate.Format "Jan 02, 2006" }} by <span class="text-primary">{{site.Params.Author}}</span></p>
         </div>
+        <!--
         <div class="col-lg-9">
           <div class="content">
             {{.Content }}
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </section>
