--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,8 +19,8 @@
                         <div class="col-12">
                             <textarea name="message" id="message" class="form-control px-0 mb-4" placeholder="Type Message Here"></textarea>
                         </div>
-                        <div class="col-lg-6 col-10 mx-auto">
-                            <button class="btn btn-primary w-100">send</button>
+                        <div class="col-lg-6 col-10 mx-auto" >
+                            <button class="btn btn-primary w-100" style = "padding-top: 15px;">send</button>
                         </div>
                     </form>
                 </div>
