--- a/layouts/index.html
+++ b/layouts/index.html
@@ -106,6 +106,25 @@
 {{ end }}
 {{ end }}
 
+{{ if site.Data.homepage.blog.enable }}
+<!-- projects -->
+<section class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="section-title">{{site.Data.homepage.blog.title | markdownify }}</h2>
+            </div>
+            {{ range first 3 (where .Site.RegularPages "Section" "portfolio")}} {{ .Render "post" }} {{ end }}
+        </div>
+        <div style="text-align: center; width:100%; text-align: center; margin: 20px">
+            <a href="{{ site.Data.homepage.blog.URL | absURL }}" style="bottom: 0; border-radius: 10px"
+                class="cv-button">View All</a>
+        </div>
+    </div>
+</section>
+<!-- /projects -->
+{{ end }}
+
 {{ if site.Data.homepage.skill.enable }} 
 {{ with site.Data.homepage.skill }}
 <!-- skills -->
@@ -252,16 +271,22 @@
             "Section" "blog") }}
             <div class="col-lg-4 col-6 mb-4 shuffle-item">
                 <div class="position-relative rounded hover-wrapper">
-                    <img src="{{.Params.image | absURL }}" alt="portfolio-image"
-                        class="img-fluid rounded w-100 d-block">
+                    <img src="{{.Params.image | absURL }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block" onclick ="onClick(this)">
+                    <!--
                     <div class="hover-overlay">
                         <div class="hover-content">
                             <a class="btn btn-light btn-sm" href="{{ .Permalink | safeURL }}">view</a>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
             {{ end }}
+        </div>
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
         </div>
         <div style="text-align: center; width:100%; text-align: center; margin: 20px">
             <a href="{{ site.Data.homepage.portfolio.URL | absURL }}" style="bottom: 0; border-radius: 10px" class="cv-button">View All</a>
@@ -269,23 +294,32 @@
     </div>
 </section>
 <!-- /my photos -->
-{{ end }}
+<script>
+    // Get the modal and it's blank image
+    var modal = document.getElementById("myModal");
+    var modalImg = document.getElementById("img01");
 
-{{ if site.Data.homepage.blog.enable }}
-<!-- projects -->
-<section class="section">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h2 class="section-title">{{site.Data.homepage.blog.title | markdownify }}</h2>
-            </div>
-            {{ range first 3 (where .Site.RegularPages "Section" "portfolio")}} {{ .Render "post" }} {{ end }}
-        </div>
-        <div style="text-align: center; width:100%; text-align: center; margin: 20px">
-            <a href="{{ site.Data.homepage.blog.URL | absURL }}" style="bottom: 0; border-radius: 10px" class="cv-button">View All</a>
-        </div>
-    </div>
-</section>
-<!-- /projects -->
+    // Get the image and insert it inside the modal - use its "alt" text as a caption
+    //var img = document.getElementById("myImg");
+    //var img_btn = document.getElementById("img-btn");img_btn.onclick = 
+    function onClick(element) {
+        modal.style.display = "block";
+        modalImg.src = element.src;
+    }
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+        modal.style.display = "none";
+    }
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 {{ end }}
 {{ end }}
