--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,9 +4,17 @@
 <!--style="background-image: url(images/pexels-pixabay-355465.jpg);"-->
 <section class="hero-area bg-primary overflow-hidden" id="parallax">
     <div class="container">
+        <!-- social icon -->
+        <ul class="list-unstyled mt-3 position-relative zindex-1" style="float: left; padding-top: 1.3cm;">
+            {{ range site.Params.social }}
+            <li class="mb-3 "><a class="text-white" href="{{.URL | safeURL }} " target="_blank"><i class="{{.icon}}"></i></a>
+            </li>
+            {{ end }}
+        </ul>
+        <!-- /social icon -->
         <div class="row">
             <div class="col-lg-11 mx-auto">
-                <h1 class="text-white font-tertiary">{{ site.Data.homepage.banner.title | safeHTML }}</h1>
+                <h1 class="text-white font-tertiary title-padding mb-5">{{ site.Data.homepage.banner.title | safeHTML }}</h1>
             </div>
         </div>
     </div>
@@ -37,13 +45,7 @@
     <div class="layer" id="l9">
         <img src="{{`images/illustrations/leaf-cyan-2.svg` | relURL}}" alt="bg-shape">
     </div>
-    <!-- social icon -->
-    <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
-        {{ range site.Params.social }}
-        <li class="mb-3"><a class="text-white" href="{{.URL | safeURL }} " target="_blank"><i class="{{.icon}}"></i></a></li>
-        {{ end }}
-    </ul>
-    <!-- /social icon -->
+    
 </section>
 <!-- /hero area -->
 
@@ -54,7 +56,8 @@
         <div class="row">
             <div class="col-lg-10 mx-auto text-left">
                 {{ with site.Data.homepage.about }}
-                <p class="font-secondary lead text-dark p3"><img src="images/about/author.jpg" alt="Aditya Kumar Singh"  height = "310" class = "img-author-class">{{.content | markdownify}}</p>
+                <p class="lead text-dark p3" style="font-size: 16px;"><img src="images/about/author.jpg" alt="Aditya Kumar Singh"  height = "250" class = "img-author-class">{{.content | markdownify}}</p>
+                <!--font-secondary-->
                 {{ if .button.enable }} {{ with .button }}
                 <div style = "text-align: center; margin: 40px; position: relative;">
                     <a href="{{ .URL | absURL }}" class="cv-button" style="color: #001a33; border-radius:10px">{{.label}}</a>
