--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,6 +22,8 @@
   {{ "<!-- Main Stylesheet -->" | safeHTML }}
   {{ $styles := resources.Get "css/style.css" | minify }}
   <link rel="stylesheet" href="{{ $styles.Permalink }}" media="screen">
+  <!--Mulish Fonts-->
+  <link href='https://fonts.googleapis.com/css?family=Mulish' rel='stylesheet'>
 
   {{ "<!--Favicon-->" | safeHTML }}
   <link rel="shortcut icon" href="{{ `images/short_icon.png` | absURL }} " type="image/x-icon">
@@ -37,6 +39,9 @@
 
 	  gtag('config', '{{ . }}');
 	</script>
+  <!--Include MathJAX Symbols-->
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 	{{ end }}
 
 </head>
