--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,20 +7,24 @@
             <h3 class="text-white font-tertiary">{{site.Title}}</h3>
             {{ end }}
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+            aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse text-center" id="navigation">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{{ site.BaseURL }}">{{ with site.Params.Home }} {{ . }} {{ end }}</a>
                 </li>
-                {{ $current := . }} {{ range site.Menus.main }} {{ $active := or ($current.IsMenuCurrent "nav" .) ($current.HasMenuCurrent "nav" .) }} {{ $active = or $active (eq .Name $current.Title) }} {{ if .HasChildren }}
+                {{ $current := . }} {{ range site.Menus.main }} {{ $active := or ($current.IsMenuCurrent "nav" .)
+                ($current.HasMenuCurrent "nav" .) }} {{ $active = or $active (eq .Name $current.Title) }} {{ if
+                .HasChildren }}
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ .Name }}
-          </a>
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        {{ .Name }}
+                    </a>
                     <div class="dropdown-menu">
                         {{ range .Children }}
                         <a class="dropdown-item" href="{{ .URL | absURL }}">{{ .Name }}</a> {{ end }}
