--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,7 +387,8 @@ a:hover {
 }
 
 .title-padding {
-  margin-top: 50px !important
+  margin-top: 50px !important;
+  padding-left: 5%
 }
 
 .zindex-1 {
@@ -493,15 +494,15 @@ textarea.form-control {
 }
 
 /*************************************************Modal CSS*************************************************************/
-/* The Modal (background) */
+/* The Modal == (whole background or say whole screen which is as of now hidden due to none display.) */
 .modal {
   display: none;
   /* Hidden by default */
   position: fixed;
   /* Stay in place */
-  z-index: 3;
+  z-index: 3; 
   /* Sit on top */
-  padding-top: 100px;
+  padding: 7% 0 0.5% 0;
   /* Location of the box */
   left: 0;
   top: 0;
@@ -511,18 +512,17 @@ textarea.form-control {
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0);
   /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.719);
   /* Black w/ opacity */
 }
 
-/* Modal Content (image) */
+/* Modal Content == (Class for image) */
 .modal-content {
   margin: auto;
   display: block;
-  width: 90%;
-  max-width: 700px;
+  width: auto;
+  height: 100%;
   background-color: rgb(27, 22, 22);
   position: relative;
   padding: 0;
@@ -560,10 +560,10 @@ textarea.form-control {
 /* The Close Button */
 .close {
   position: relative;
-  z-index: 1;
+  z-index: 3;
   top: 15px;
   right: 35px;
-  color: #fe9f44;
+  color: #ffffff;
   font-size: 40px;
   font-weight: bold;
   transition: 0.3s;
@@ -571,36 +571,48 @@ textarea.form-control {
 
 .close:hover,
 .close:focus {
-  color: #000000;
+  color: #001a33;
   text-decoration: none;
   cursor: pointer;
 }
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px) {
+  .modal {
+  padding: 7% 7% 0.5% 7%;
+  }
   .modal-content {
-    width: 100%;
+    height: 100%;
+    width: auto
   }
 }
 
 /******************************************About Section******************************************/
+.inline-to-block {
+  display: flex;
+}
+
 .left {
-  float: left;
-  width: 30%; /* The width is 20%, by default */
+  width: 25%;
+  margin: 0 2%;
 }
 
 .right {
-  float: left;
-  width: 70%; /* The width is 20%, by default */
+  width: 70%;
+  margin-left: 5%;
 }
 
 @media screen and (max-width: 800px) {
   .left {
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    padding: auto
   }
   .right {
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
     padding-top: 8%;
+  }
+  .inline-to-block {
+    flex-direction: column;
   }
 }
 /*.about-section {
@@ -614,7 +626,33 @@ textarea.form-control {
     white-space: nowrap 
   }
 } */
+/***************************************Unordered List - social icons****************************/
+#social-icons {
+  float: left;
+  padding-top: 4.2%;
+  margin-left: 2%;
+}
 
+#both {
+  margin-top: 0;
+  padding: 0;
+  display:flex;
+  width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  li {
+  display: inline-block;
+  padding:2%;
+  }
+  #both {
+    flex-direction: column-reverse;
+  }
+  #social-icons {
+    padding-top: 0.5%;
+    margin-left: 7%;
+  }
+}
 /*************************************************************************************************/
 
 
