--- a/layouts/gallery/list.html
+++ b/layouts/gallery/list.html
@@ -1,17 +1,87 @@
 {{ define "main" }}
 
-  {{ partial "page-title.html" . }}
+{{ partial "page-title.html" . }}
 
-  <!-- blog -->
-  <section class="section">
-    <div class="container">
-      <div class="row">
-        {{ range .Data.Pages }}
-        {{ .Render "post" }}
-        {{ end }}
+<!-- portfolio -->
+<section class="section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12">
+        <div class="btn-group btn-group-toggle justify-content-center d-flex flex-wrap" data-toggle="buttons">
+          <label class="btn btn-sm btn-primary active">
+            <input type="radio" name="shuffle-filter" value="all" checked="checked" />All
+          </label>
+					{{ $categories := slice }}
+					{{ range .Data.Pages }}
+					{{ range .Params.categories }}
+					{{ $categories = $categories | append . }}
+					{{ end }}
+					{{ end }}
+					{{ range ( $categories | uniq ) }}
+          <label class="btn btn-sm btn-primary">
+            <input type="radio" name="shuffle-filter" value="{{ . | urlize }}" />{{ . | humanize }}
+          </label>
+          {{ end }}
+        </div>
       </div>
     </div>
-  </section>
-  <!-- /blog -->
+    <div class="row shuffle-wrapper">
+      {{ range .Data.Pages }}
+      <div class="col-lg-4 col-6 mb-4 shuffle-item" data-groups="[{{range $index, $element:= .Params.categories }}{{if ne $index 0}},{{end}}&quot;{{. | urlize}}&quot;{{ end }}]">
+        <div class="position-relative rounded hover-wrapper">
+          <img src="{{.Params.image | absURL }}" alt="portfolio-image" class="img-fluid rounded w-100 d-block" id= "myImg" onclick ="onClick(this)">
+          <!--
+          <div class="hover-overlay">
+            <div class="hover-content">
+              <a class="btn btn-light btn-sm" href="{{ .Permalink }}">view</a>
+            </div>
+          </div>-->
+        </div>
+      </div>
+      {{ end }}
+    </div>
+  </div>
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+  </div>
+</section>
 
+<script>
+  // Get the modal and it's blank image
+  var modal = document.getElementById("myModal");
+  var modalImg = document.getElementById("img01");
+
+  // Get the image and insert it inside the modal - use its "alt" text as a caption
+  //var img = document.getElementById("myImg");
+  //var img_btn = document.getElementById("img-btn");img_btn.onclick = 
+  function onClick(element) {
+    modal.style.display = "block";
+    modalImg.src = element.src;
+  }
+
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
+
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function () {
+    modal.style.display = "none";
+  }
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function (event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+</script>
+<!-- /portfolio -->
+
+{{if site.Data.about.clients_logo_slider.enable}}
+<section class="section bg-light">
+  <div class="container">
+    {{ partial "client-slider.html" . }}
+  </div>
+</section>
+{{ end }}
 {{ end }}
