--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
 <section class="hero-area bg-primary overflow-hidden" id="parallax">
     <div id="both">
         <!-- social icon -->
-        <ul class="list-unstyled mt-3 position-relative zindex-1" id="social-icons">
+        <ul class="list-unstyled mt-3 position-relative zindex-1" id="social-icons-1">
             {{ range site.Params.social }}
             <li class="mb-3 "><a class="text-white" href="{{.URL | safeURL }} " target="_blank"><i
                         class="{{.icon}}"></i></a>
